tdf#103960: The import of UCS2 data uses a different code path.

The commit b297f7bbfed83f87398231740e910afe6ebfbb97 was too eager from this
point of view, we shouldn't use SetSrcEncoding for UCS2 because in that case
we end up with RTL_TEXTENCODING_DONTKNOW in eSrcEnc.

Change-Id: Id8bcb08aee17c8258c074b481345a2795939edc0