sc/qa/unit/bugfix-test.cxx
@@ -89,6 +89,7 @@ public:
     void testTdf98657();
     void testTdf88821();
     void testTdf88821_2();
+    void testTdf103960();
     void testRhbz1390776();
 
     CPPUNIT_TEST_SUITE(ScFiltersTest);
@@ -101,6 +102,7 @@ public:
     CPPUNIT_TEST(testTdf98657);
     CPPUNIT_TEST(testTdf88821);
     CPPUNIT_TEST(testTdf88821_2);
+    CPPUNIT_TEST(testTdf103960);
     CPPUNIT_TEST(testRhbz1390776);
     CPPUNIT_TEST_SUITE_END();
 private:
@@ -267,6 +269,17 @@ void ScFiltersTest::testTdf88821_2()
 
     // A2 should be 'ABCabcČŠŽčšž', not 'ABCabcÄŒÅ Å½ÄﾍÅ¡Å¾'
     CPPUNIT_ASSERT_EQUAL(OStringToOUString("ABCabc\xC4\x8C\xC5\xA0\xC5\xBD\xC4\x8D\xC5\xA1\xC5\xBE", RTL_TEXTENCODING_UTF8), rDoc.GetString(0, 1, 0));
+
+    xDocSh->DoClose();
+}
+
+void ScFiltersTest::testTdf103960()
+{
+    ScDocShellRef xDocSh = loadDoc("tdf103960.", FORMAT_HTML);
+    ScDocument& rDoc = xDocSh->GetDocument();
+
+    // A1 should be 'Data', not the entire content of the file
+    CPPUNIT_ASSERT_EQUAL(OStringToOUString("Data", RTL_TEXTENCODING_UTF8), rDoc.GetString(0, 0, 0));
 
     xDocSh->DoClose();
 }
